--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -10,6 +10,13 @@ add_executable(rtype_client_tests
 target_link_libraries(rtype_client_tests
     PRIVATE
         rtype_shared
+        rtype_client_lib
+        rtype_gtest
+)
+
+target_include_directories(rtype_client_tests
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/client/include
 )
 
 add_test(NAME client_tests COMMAND rtype_client_tests)
