--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y clang-tidy cmake ninja-build g++ ripgrep \
-            libx11-dev libxrandr-dev libudev-dev libgl1-mesa-dev libopenal-dev libsndfile1-dev libfreetype6-dev libjpeg-dev
+            libx11-dev libxcursor-dev libxi-dev libxrandr-dev libxinerama-dev libudev-dev \
+            libgl1-mesa-dev libopenal-dev libsndfile1-dev libfreetype6-dev libjpeg-dev
       - name: Configure
         run: cmake -S . -B build -GNinja -DBUILD_TESTS=ON -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
       - name: Clang-tidy
@@ -40,7 +41,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build g++ \
-            libx11-dev libxrandr-dev libudev-dev libgl1-mesa-dev libopenal-dev libsndfile1-dev libfreetype6-dev libjpeg-dev
+            libx11-dev libxcursor-dev libxi-dev libxrandr-dev libxinerama-dev libudev-dev \
+            libgl1-mesa-dev libopenal-dev libsndfile1-dev libfreetype6-dev libjpeg-dev
       - name: Configure
         run: cmake -S . -B build -GNinja -DBUILD_TESTS=ON
       - name: Build
