--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build g++ \
             libx11-dev libxcursor-dev libxi-dev libxrandr-dev libxinerama-dev libudev-dev \
-            libgl1-mesa-dev libopenal-dev libsndfile1-dev libfreetype6-dev libjpeg-dev
+            libgl1-mesa-dev libopenal-dev libsndfile1-dev libfreetype6-dev libjpeg-dev xvfb
       - name: Configure
         run: cmake -S . -B build -GNinja -DBUILD_TESTS=ON
       - name: Build
         run: cmake --build build
       - name: Tests
-        run: ctest --test-dir build --output-on-failure
+        run: xvfb-run -a ctest --test-dir build --output-on-failure
 
   deploy:
     runs-on: ubuntu-latest
