chore(tests): fixed path so tests can be run correctly in CI

--- a/tests/client/CMakeLists.txt
+++ b/tests/client/CMakeLists.txt
@@ -19,4 +19,9 @@ target_include_directories(rtype_client_tests
         ${CMAKE_SOURCE_DIR}/client/include
 )
 
+target_compile_definitions(rtype_client_tests
+    PRIVATE
+        RTYPE_ASSETS_DIR="${CMAKE_SOURCE_DIR}/client/assets"
+)
+
 add_test(NAME client_tests COMMAND rtype_client_tests)
