Simondelcuze/rtype 7 sfml utils (#4)
* chore(client): added given assets

* chore(client): removed assets zip file and duplicate folder

* chore(formatter): switched from google preset to LLVM to bettter readability

* feat(client): sfml utils to create sprites, textures, windows

* chore(linter): removed variable names length from linter

* tests(client/sfmlutils): fix used of undefined variable

* chore(tests): fix ci not having a graphical environnement for sfml tests

* chore(tests): fixed path so tests can be run correctly in CI

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,8 +1,23 @@
+include(FetchContent)
+
 file(GLOB_RECURSE RTYPE_CLIENT_SOURCES
     CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
 )
+
+set(RTYPE_SFML_VERSION 3.0.2)
+FetchContent_Declare(
+    sfml
+    URL https://github.com/SFML/SFML/archive/refs/tags/${RTYPE_SFML_VERSION}.zip
+    DOWNLOAD_EXTRACT_TIMESTAMP ON
+)
+set(SFML_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(SFML_BUILD_TEST_SUITE OFF CACHE BOOL "" FORCE)
+set(SFML_BUILD_DOC OFF CACHE BOOL "" FORCE)
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(sfml)
+set(SFML_LIBS SFML::Graphics SFML::Window SFML::System SFML::Audio)
 
 list(FILTER RTYPE_CLIENT_SOURCES EXCLUDE REGEX "Main\\.cpp$")
 
@@ -16,7 +31,7 @@ target_include_directories(rtype_client_lib
 )
 
 target_link_libraries(rtype_client_lib
-    PRIVATE
+    PUBLIC
         rtype_shared
         SFML::Graphics
         SFML::Window
@@ -32,6 +47,7 @@ add_executable(rtype_client
 target_link_libraries(rtype_client
     PRIVATE
         rtype_client_lib
+        ${SFML_LIBS}
 )
 
 target_include_directories(rtype_client
