--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,14 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(sfml)
 
+FetchContent_Declare(
+    json
+    GIT_REPOSITORY https://github.com/nlohmann/json.git
+    GIT_TAG v3.11.3
+    GIT_SHALLOW TRUE
+)
+FetchContent_MakeAvailable(json)
+
 target_include_directories(rtype_shared
     PUBLIC
         ${CMAKE_SOURCE_DIR}/shared/include
