--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+      - '.gitignore'
 
 jobs:
   format:
@@ -68,3 +71,32 @@ jobs:
         with:
           target_repo_url: ${{ vars.MIRROR_URL }}
           ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+
+  deploy-docs:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: |
+          pip install mkdocs-material
+
+      - name: Build documentation
+        run: mkdocs build -v -f .github/mkdocs.yml
+
+      - name: Deploy to VPS via SSH
+        if: vars.VPS_HOST != ''
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.VPS_SSH_KEY }}
+          ARGS: "-rlgoDzvc -i --delete"
+          SOURCE: ".github/site/"
+          REMOTE_HOST: ${{ vars.VPS_HOST }}
+          REMOTE_USER: ${{ vars.VPS_USER }}
+          TARGET: ${{ vars.VPS_DOCS_PATH }}
