fix: assets missing in tests run

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,20 @@ if (BUILD_TESTS)
     include(CTest)
     enable_testing()
     add_subdirectory(tests)
+
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/server)
+    if(NOT EXISTS ${CMAKE_BINARY_DIR}/server/assets)
+        if(UNIX)
+            execute_process(
+                COMMAND ${CMAKE_COMMAND} -E create_symlink
+                    ${CMAKE_SOURCE_DIR}/server/assets
+                    ${CMAKE_BINARY_DIR}/server/assets
+            )
+        else()
+            file(COPY ${CMAKE_SOURCE_DIR}/server/assets
+                 DESTINATION ${CMAKE_BINARY_DIR}/server/)
+        endif()
+    endif()
 endif()
 
 add_custom_target(clang_format
@@ -128,3 +142,13 @@ add_custom_target(clang_tidy
     COMMAND ${CMAKE_SOURCE_DIR}/scripts/lint.sh
     COMMENT "Running clang-tidy on project sources"
 )
+
+if (BUILD_TESTS)
+    add_custom_target(tests
+        COMMAND ${CMAKE_SOURCE_DIR}/rtype_server_tests
+        COMMAND ${CMAKE_SOURCE_DIR}/rtype_client_tests
+        DEPENDS rtype_server_tests rtype_client_tests
+        COMMENT "Running all tests"
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    )
+endif()
