feat(build): add client build option and update build script

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,3 +1,14 @@
+set(SFML_BUILD_EXAMPLES OFF CACHE INTERNAL "")
+set(SFML_BUILD_TEST_SUITE OFF CACHE INTERNAL "")
+set(SFML_USE_STATIC_STD_LIBS OFF CACHE INTERNAL "")
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+CPMAddPackage(
+    NAME SFML
+    GITHUB_REPOSITORY SFML/SFML
+    GIT_TAG 3.0.2
+    GIT_SHALLOW TRUE
+)
+
 file(GLOB_RECURSE RTYPE_CLIENT_SOURCES
     CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
