--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,26 @@ CPMAddPackage(
     GIT_SHALLOW TRUE
 )
 
+CPMAddPackage(
+    NAME imgui
+    GITHUB_REPOSITORY ocornut/imgui
+    GIT_TAG v1.90.4
+    GIT_SHALLOW TRUE
+)
+
+if(imgui_ADDED)
+    find_package(OpenGL REQUIRED)
+    add_library(imgui STATIC
+        ${imgui_SOURCE_DIR}/imgui.cpp
+        ${imgui_SOURCE_DIR}/imgui_draw.cpp
+        ${imgui_SOURCE_DIR}/imgui_tables.cpp
+        ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+        ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl2.cpp
+    )
+    target_include_directories(imgui PUBLIC ${imgui_SOURCE_DIR} ${imgui_SOURCE_DIR}/backends)
+    target_link_libraries(imgui PUBLIC OpenGL::GL)
+endif()
+
 set(LZ4_MIN_CMAKE_PATCH "${CMAKE_CURRENT_LIST_DIR}/cmake/patches/lz4_force_min_cmake.cmake")
 
 CPMAddPackage(
@@ -112,6 +132,7 @@ target_link_libraries(rtype_shared
 
 add_subdirectory(client)
 add_subdirectory(server)
+add_subdirectory(editor)
 
 if (BUILD_TESTS)
     include(CTest)
