refactor(server): organize source and headers into modular directory structure

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(rtype_server_lib
 )
 
 add_executable(rtype_server
-    src/Main.cpp
+    src/core/Main.cpp
 )
 
 target_link_libraries(rtype_server
