feat: add complete authentication system with user statistics display

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -22,6 +22,10 @@ target_link_libraries(rtype_server_lib
     PRIVATE
         rtype_shared
         nlohmann_json::nlohmann_json
+        SQLite::SQLite3
+        jwt-cpp::jwt-cpp
+        OpenSSL::SSL
+        OpenSSL::Crypto
 )
 
 add_executable(rtype_server
