--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,25 @@ logs
 r-type_client
 r-type_server
 Debug/
+
+# SQLite databases (runtime data)
+data/*.db
+data/*.db-shm
+data/*.db-wal
+data/*.db-journal
+
+# JWT test binaries (should be built, not committed)
+es256k
+jwks-verify
+nlohmann-json
+partial-claim-verifier
+print-claims
+private-claims
+rsa-create
+rsa-verify
+
+# Test scripts
+test_auth.sh
+
+# Server logs
+server_test.log
