feat: add complete authentication system with user statistics display
* feat: add complete authentication system with user statistics display

* chore: format code

--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,23 @@ logs
 r-type_client
 r-type_server
 Debug/
+
+data/*.db
+data/*.db-shm
+data/*.db-wal
+data/*.db-journal
+
+es256k
+jwks-verify
+nlohmann-json
+partial-claim-verifier
+print-claims
+private-claims
+rsa-create
+rsa-verify
+
+test_auth.sh
+
+server_test.log
 r-type_level_editor
 lz4
