feat: update checkpoint and respawn mechanics
- Refactor checkpoint handling to remove snapshot capture; checkpoints now only mark ids for trigger evaluation.
- Modify respawn behavior: players respawn on the left side of the screen with base loadout, and the level continues without reset.
- Update documentation to reflect changes in checkpoint and respawn mechanics across relevant files.
- Remove unused checkpoint state management from GameInstance and LevelDirector.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,31 @@ if(POLICY CMP0169)
     set(CMAKE_POLICY_DEFAULT_CMP0169 OLD)
 endif()
 
+if(APPLE)
+    if((NOT DEFINED CMAKE_OSX_ARCHITECTURES) OR (CMAKE_OSX_ARCHITECTURES STREQUAL ""))
+        if(EXISTS "/opt/homebrew/opt/openssl@3" AND NOT EXISTS "/usr/local/opt/openssl@3")
+            set(CMAKE_OSX_ARCHITECTURES "arm64" CACHE STRING "" FORCE)
+        elseif(EXISTS "/usr/local/opt/openssl@3" AND NOT EXISTS "/opt/homebrew/opt/openssl@3")
+            set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "" FORCE)
+        else()
+            set(CMAKE_OSX_ARCHITECTURES "${CMAKE_HOST_SYSTEM_PROCESSOR}" CACHE STRING "" FORCE)
+        endif()
+    elseif(CMAKE_OSX_ARCHITECTURES STREQUAL "x86_64" AND EXISTS "/opt/homebrew/opt/openssl@3" AND
+           NOT EXISTS "/usr/local/opt/openssl@3")
+        set(CMAKE_OSX_ARCHITECTURES "arm64" CACHE STRING "" FORCE)
+    elseif(CMAKE_OSX_ARCHITECTURES STREQUAL "arm64" AND EXISTS "/usr/local/opt/openssl@3" AND
+           NOT EXISTS "/opt/homebrew/opt/openssl@3")
+        set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "" FORCE)
+    endif()
+    if((NOT DEFINED OPENSSL_ROOT_DIR) OR (OPENSSL_ROOT_DIR STREQUAL ""))
+        if(CMAKE_OSX_ARCHITECTURES STREQUAL "arm64" AND EXISTS "/opt/homebrew/opt/openssl@3")
+            set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@3" CACHE PATH "" FORCE)
+        elseif(CMAKE_OSX_ARCHITECTURES STREQUAL "x86_64" AND EXISTS "/usr/local/opt/openssl@3")
+            set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl@3" CACHE PATH "" FORCE)
+        endif()
+    endif()
+endif()
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
