feat: textual chat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 set(CPM_DOWNLOAD_VERSION 0.38.6)
 set(CPM_DOWNLOAD_LOCATION "${CMAKE_BINARY_DIR}/cmake/CPM.cmake")
@@ -120,6 +120,7 @@ if(SQLite3_ADDED)
     endif()
 endif()
 
+set(JWT_CPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 CPMAddPackage(
     NAME jwt-cpp
     GITHUB_REPOSITORY Thalhammer/jwt-cpp
