--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -48,4 +48,7 @@ target_include_directories(rtype_client
 
 target_compile_options(rtype_client PRIVATE ${RTYPE_COMPILE_OPTIONS})
 
-set_target_properties(rtype_client PROPERTIES OUTPUT_NAME "r-type_client")
+set_target_properties(rtype_client PROPERTIES 
+    OUTPUT_NAME "r-type_client"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}"
+)
