--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -46,4 +46,7 @@ target_include_directories(rtype_server
 
 target_compile_options(rtype_server PRIVATE ${RTYPE_COMPILE_OPTIONS})
 
-set_target_properties(rtype_server PROPERTIES OUTPUT_NAME "r-type_server")
+set_target_properties(rtype_server PROPERTIES 
+    OUTPUT_NAME "r-type_server"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}"
+)
