feat: game rule config in room menu

--- a/server.log.config
+++ b/server.log.config
@@ -6,8 +6,8 @@
 # Network & Snapshots
 #[Snapshot]
 #[Input]
-[Net]
-[Packets]
+#[Net]
+#[Packets]
 
 
 # Gameplay
@@ -17,6 +17,7 @@
 #[Level]
 #[Replication]
 #[Network]
+[Config]
 
 # Players
 #[Player]
