chore: debung prints

--- a/server.log.config
+++ b/server.log.config
@@ -6,21 +6,24 @@
 # Network & Snapshots
 #[Snapshot]
 #[Input]
-[Net]
+#[Net]
 #[Packets]
 
 
 # Gameplay
-[Game]
+#[Game]
 #[Collision]
 #[Spawn]
 #[Level]
 #[Replication]
 #[Network]
-[Config]
-[RoomWaitingMenu]
+#[Config]
+#[RoomWaitingMenu]
 
 # Players
 #[Player]
 #[Death]
 #[Respawn]
+
+# Room-specific debug
+[Room1]
